<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="713dp"
        android:layout_marginBottom="212dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/home" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <Button
        android:id="@+id/about"
        android:layout_width="412dp"
        android:layout_height="110dp"
        android:layout_marginTop="492dp"
        android:background="#00ff0000"
        android:fontFamily="serif"
        android:gravity="left|center_vertical"
        android:text="@string/about"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/whatsOn"
        android:layout_width="412dp"
        android:layout_height="110dp"
        android:layout_marginTop="108dp"
        android:background="#00ff0000"
        android:fontFamily="serif"
        android:gravity="left|center_vertical"
        android:text="@string/whatsOn"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/about" />

    <Button
        android:id="@+id/sessions"
        android:layout_width="412dp"
        android:layout_height="110dp"
        android:layout_marginTop="108dp"
        android:background="#00ff0000"
        android:fontFamily="serif"
        android:gravity="left|center_vertical"
        android:text="@string/sessions"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about" />

    <Button
        android:id="@+id/tickets"
        android:layout_width="412dp"
        android:layout_height="110dp"
        android:layout_marginTop="108dp"
        android:background="#00ff0000"
        android:fontFamily="serif"
        android:gravity="left|center_vertical"
        android:text="@string/tickets"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sessions" />

</androidx.constraintlayout.widget.ConstraintLayout>